# Modified-Sorting

./: CMakeLists.txt  README.md  consistentresultverification.cxx  insertionsort.cpp  insertionsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  sortedverification.cxx  timealgorithms.cxx
